@@ -1,3 +1,8 @@
+2019-07-14  Kenneth Loafman  <kenneth@loafman.com>
+
+    * Install python3.6 and 3.7 explicitly in Dockerfile.  Tox and Docker
+      now support testing Python 2,7, 3.6, and 3.7.
+
 2019-07-11  Kenneth Loafman  <kenneth@loafman.com>
 
     * Another unadorned string.
