@@ -51,6 +51,8 @@ New in v0.8.01 (2019/0?/??)
 * Cleanup some trailing spaces/lines in Docker files.
 * Make sure test filenames a bytes not unicode.
 * Fix test_glob_to_regex to work on Python 3.7
+* Install python3.6 and 3.7 explicitly in Dockerfile.  Tox and Docker
+  now support testing Python 2,7, 3.6, and 3.7.
 
 
 New in v0.8.00 (2019/05/29)
